# ncbjTask_GoogleTest

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  ncbjTask.cpp
src/include/: ncbjTask.h
tests/: CMakeLists.txt  ncbjTask_test.cpp
